# docker-mcp-bridge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  configs_secrets.py  docker-compose.dev.yml  docker-compose.infisical.yml  docker-compose.yml  dy_mcp_test.py  main.py  mcp_host.py  prompts.py  provider.py  pyproject.toml  test.ipynb  test.py  utils.py
api/: .env.example  README.md  app.py  config.py  core.py  gateway_client.py  helper.py  logger.py  main.py  models.py  prompts.py  provider.py  pyproject.toml  routes.py  state_manager.py
api/core/: core.py  gateway_client.py  registry.py  state_manager.py
api/providers/: __init__.py  base.py  factory.py  openai.py  openrouter.py
api/router/: chat_routes.py  mcp_routes.py
api/routes/: chat_routes.py
api/services/: docker_secrets.py  langfuse_client.py  redis_client.py  secrets_manager.py  state_manager.py  state_manager_redis.py
api/utils/: catalog_yml_to_json.py  prompts.py
cli/: .env.example  README.md  cli_app.py  cli_chat.py  configs_secrets.py  docker-compose.yml  mcp_host.py  provider.py  pyproject.toml
cli/src/: cli_chat.py  configs_secrets.py  helpers.py  mcp_catalog.py  mcp_host.py  provider.py  state_manager.py
cli/src/assets/: catalog.yaml
cli/src/catalog/: SQLite.json  airtable-mcp-server.json  aks.json  amazon-bedrock-agentcore.json  amazon-kendra-index.json  amazon-neptune.json  apify.json  (+265 more)
exp/: catalog_from_yml.py  dy_mcp_test.py  exp1.ipynb  get_catalog.py  mcp_host.py  test.py
test/: configs_secrets.py  dy_mcp_test.py  mcp_host.py  provider.py
