[project]
name = "docker-mcp-host"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.123.8",
    "loguru>=0.7.3",
    "openai>=2.8.1",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "websockets>=15.0.1",
]

[tool.uv.workspace]
members = [
    "cli",
    "api",
]
